<resources>
    <string name="app_name">ApprenticeStreet</string>

    <!-- Common -->
    <string name="all">ALL</string>
    <string name="icon">Icon</string>
    <string name="min_value">Min %d</string>

    <!-- Titles -->
    <string name="title_progress">Progress</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_search_job">Search Job</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_post_job">Post Job</string>
    <string name="title_edit_job_desc">Edit Job Description</string>
    <string name="title_edit_learning_outcome">Edit Learning Outcome</string>
    <string name="title_job_view">Job View</string>
    <string name="title_job_desc">Job Description</string>

    <!-- Filters -->
    <string name="filters">Filters</string>
    <string name="job_title">Job Title</string>

    <!-- Filter Options -->
    <string name="industries">Industries</string>
    <string name="locations">Locations</string>
    <string name="salaries">Salaries</string>

    <!-- Job Details -->
    <string name="company_logo">Company Logo</string>
    <string name="dummy_job_title">Intern Software Engineer</string>
    <string name="dummy_company_name">Dummy Enterprise Sdn. Bhd.</string>
    <string name="company_photo">Company Photo</string>
    <string name="salary_range">MYR %1$d – %2$d per month</string>
    <string name="dummy_salary_range">MYR 500 – 1000 per month</string>
    <string name="learning_outcome">Learning Outcome</string>
    <string name="dummy_learning_outcome">
        • Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec luctus aliquet luctus.\n\n
        • Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec luctus aliquet luctus.\n\n
        • Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec luctus aliquet luctus.
    </string>

    <!-- Industries -->
    <string name="art_media">Art &amp; Media</string>
    <string name="construction">Construction</string>
    <string name="engineering">Engineering</string>
    <string name="healthcare">Healthcare</string>
    <string name="hotel">Hotel</string>
    <string name="information_technology">Information Technology</string>
    <string name="manufacturing">Manufacturing</string>
    <string name="restaurant">Restaurant</string>
    <string name="services">Services</string>

    <!-- Locations -->
    <string name="johor">Johor</string>
    <string name="kedah">Kedah</string>
    <string name="kelantan">Kelantan</string>
    <string name="kuala_lumpur">Kuala Lumpur</string>
    <string name="melaka">Melaka</string>
    <string name="negeri_sembilan">Negeri Sembilan</string>
    <string name="pahang">Pahang</string>
    <string name="penang">Penang</string>
    <string name="perak">Perak</string>
    <string name="perlis">Perlis</string>
    <string name="sabah">Sabah</string>
    <string name="sarawak">Sarawak</string>
    <string name="selangor">Selangor</string>
    <string name="terangganu">Terangganu</string>

    <!-- Salaries -->
    <string name="min_salary_per_month">Min Salary (MYR) / Month</string>
    <string name="max_salary_per_month">Max Salary (MYR) / Month</string>

    <!-- Labels -->
    <string name="location">Location</string>
    <string name="display_salary_range">Display salary range</string>
    <string name="job_desc">Job Description</string>
    <string name="entered_word_count">%d words entered</string>
    <string name="entered_progress_count">%d progresses entered</string>
    <string name="show_more">Show more</string>
    <string name="post_job">Submit Job Posting</string>
    <string name="languageSkillBM">Bahasa Melayu</string>
    <string name="languageSkillEN">English</string>
    <string name="languageSkillCH">Chinese</string>
    <string-array name="Level_of_Education">
        <item>Primary School</item>
        <item>Secondary School (drop out halfway)</item>
        <item>SPM</item>
        <item>Diploma or higher education level</item>
    </string-array>

    <string name="Status">Status</string>
    <string name="apply_job">Apply for this job now</string>
    <string name="Fire">Fire</string>
    <string name="required_job_title">
        Job Title <b><font color="#FF0000">*</font></b>
    </string>
    <string name="job_applied">Applied Job</string>
    <string name="Approve">Approve</string>
    <string name="Deline">Deline</string>
    <string name="required_industry">
        Industry <b><font color="#FF0000">*</font></b>
    </string>
    <string name="required_location">
        Location <b><font color="#FF0000">*</font></b>
    </string>
    <string name="required_min_salary_per_month">
        Min Salary (MYR) / Month <b><font color="#FF0000">*</font></b>
    </string>
    <string name="required_max_salary_per_month">
        Max Salary (MYR) / Month <b><font color="#FF0000">*</font></b>
    </string>

    <string name="age">Age</string>
    <string name="job">Job</string>
    <string name="hintForOutcome">enter a item will learn in your job</string>

    <!-- Actions -->
    <string name="add_new_progress">Add New Progress</string>
    <string name="to_bottom">Go to bottom</string>
    <string name="to_top">Go to top</string>

    <!-- Error Messages -->
    <string name="fetch_job_failed_err_msg">
        Failed to fetch available jobs. Please try again.
    </string>
    <string name="invalid_salaries_err_msg">
        Min salary must be less than or equal to max salary
    </string>
    <string name="empty_field_err_msg">This field cannot be empty</string>
    <string name="empty_job_desc_err_msg">Job description must not be empty</string>
    <string name="no_learning_outcome_err_msg">
        Make sure you have at least one progress in learning outcome
    </string>
    <string name="post_job_failed_err_msg">Failed to post a new job. Please try again.</string>
    <string name="floatingbutton">floatingbutton</string>

    <!-- Success Messages -->
    <string name="post_job_success_msg">Successfully posted a new job</string>
    <string name="apply_job_success_msg">You successfully applied this job</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Lim Ming Yan strings below -->
    <string name="start_title">Sign In Here</string>
    <string name="start_sub_title">
        Nice to meet you, come and join for work!
        <br><b>Login</b> if you already have an account.</br>
        <br><b>Register</b> to get started with the app.</br>
    </string>
    <string name="register_btn">REGISTER</string>
    <string name="login_btn">LOGIN</string>
    <string name="login_title">Login to Apprentice Street</string>
    <string name="login_sub_title">
        <font color="#00C9B8"><b>Login</b></font> if you already have an account.
    </string>
    <string name="login_email">Your email or username</string>
    <string name="login_password">Your password</string>
    <string name="login_forgot_pw">Forgot Password?</string>

    <string name="login_havent_account">
        I don\'t have an account.
    </string>
    <string name="register_title">Create a user account</string>

    <string name="register_sub_title">
        <font color="#00C9B8"><b>Register</b></font> to get started.
    </string>
    <string name="register_fullname">Your full name</string>
    <string name="register_email">Your email</string>
    <string name="register_username">Your username</string>
    <string name="register_password">Your password</string>
    <string name="register_confirm_password">Confirm Password</string>

    <string name="register_have_account">
        I already have an account
        <font color="00C9B8"><b>Login</b></font>
    </string>
    <string name="logout_btn">LOGOUT</string>
    <string name="register_company_page">Create Company Page</string>
    <string name="register_company_name">Company Name</string>
    <string name="register_manager_name">Manager name</string>
    <string name="register_contact_no">Contact No</string>
    <string name="register_company_email">Company Email</string>
    <string name="register_company_username">Username</string>
    <string name="register_company_password">Password</string>
    <string name="register_company_confirm_password">Confirm Password</string>
    <string name="confirm_status">Are you a worker or a company?</string>
    <string name="register_company_btn">REGISTER</string>
    <string name="register_button">REGISTER</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_complete_profile">completeProfile</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>
